# hspkg

./: .gitignore  pyproject.toml  readme.md  setup.py
src/hspkg/: __init__.py
src/hspkg/hslib/: __init__.pyi  hs.cabal
src/hspkg/hslib/src/: HsLib.hs  cbits.c  cbits.h  hslib.c
